tests/files/parser_tests/should_fail/075.cmdr
//Should not parse ternary expression
x = true ? : y;